--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "accounts-semantic",
-  "description": "Semantic UI – Accounts UI for React in Meteor 1.3",
+  "description": "Semantic UI – Accounts UI for React in Meteor 1.6. Miniwe's updated",
   "repository": {
     "type": "git",
     "url": "https://github.com/studiointeract/accounts-semantic.git"
